<package format="2">
  <name>zed_video_sub_tutorial</name>
  <version>2.6.0</version>
  <description>
    This package is a tutorial showing how to subscribe to ZED Video streams
  </description>

  <maintainer email="support@stereolabs.com">STEREOLABS</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
</package>
